--- a/content/blog/part-4-stochastic-gradient-descent/index.mdx
+++ b/content/blog/part-4-stochastic-gradient-descent/index.mdx
@@ -11,5 +11,12 @@ import { Link } from 'gatsby';
 
 This is part 3 of the series on Gradient Descent.
 
-- <Link to="/blog/part-1-gradient-descent">Part 1: Gradient Descent</Link>
-- <Link to="/blog/part-2-batch-gradient-descent">Part 2: Batch Gradient Descent</Link>
+- <Link to="/blog/part-1-mathematics-of-gradient-descent">
+    Part 1: Mathematics of Gradient Descent
+  </Link>
+- <Link to="/blog/part-2-gradient-descent">
+    Part 2: Gradient Descent
+  </Link>
+- <Link to="/blog/part-3-batch-gradient-descent">
+    Part 3: Batch Gradient Descent
+  </Link>
