--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -1,10 +1,10 @@
 ---
-title: 'Part 1: Gradient Line'
+title: 'Part 1: Mathematics of Gradient Descent'
 type: 'blog'
-date: 2021-12-16
+date: 2022-02-13
 published: true
-description: 'A gentrle introduction to the Gradient Descent algorithm'
-tags: ['Optimization', 'Machine Learning']
+description: 'A gentle introduction to the Gradient Descent algorithm'
+tags: ['Calculus, 'Optimization', 'Machine Learning']
 ---
 
 This is part 1 of the series on Gradient Descent.
@@ -215,3 +215,5 @@ $$
 $$
 
 The two equations above will help us to approximate the minimum value of the cost function by updating $\Theta_{0}$ and $\Theta_{1}$ over time.
+
+# References
