--- a/content/blog/part-2-gradient-descent/index.mdx
+++ b/content/blog/part-2-gradient-descent/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Part 1: Gradient Descent'
 type: 'blog'
-date: 2021-12-16
+date: 2022-02-16
 published: true
-description: 'Gradient Descent implementations with Linear Regression'
+description: 'A Gradient Descent implementation with Linear Regression in Python'
 tags: ['Python', 'Optimization', 'Machine Learning']
 ---
 
@@ -178,3 +178,5 @@ Let's animate the movement of the regression lines.
 ![Regression line animation](./gd.gif)
 
 I am not including most of the codes in this blog post. So if you want to know how those graphs were generated, [click here](https://www.kaggle.com/bijonsetyawan/part-1-gradient-descent) to check the Python notebook on Kaggle.
+
+# References
