--- a/content/blog/part-3-batch-gradient-descent/index.mdx
+++ b/content/blog/part-3-batch-gradient-descent/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: 'Part 2: Batch Gradient Descent'
 type: 'blog'
-date: 2021-12-18
+date: 2022-02-22
 published: false
-description: 'Batch Gradient Descent implementations with Linear Regression'
+description: 'A Batch Gradient Descent implementation with Linear Regression in Python'
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
@@ -20,3 +20,5 @@ This is part 3 of the series on Gradient Descent.
 - <Link to="/blog/part-4-stochastic-gradient-descent">
     Part 4: Stochastic Gradient Descent
   </Link>
+
+# References
