--- a/content/blog/part-2-gradient-descent/index.mdx
+++ b/content/blog/part-2-gradient-descent/index.mdx
@@ -4,7 +4,7 @@ type: 'blog'
 date: 2022-02-16
 published: true
 description: 'A Gradient Descent implementation with Linear Regression in Python'
-tags: ['Python', 'Optimization', 'Machine Learning']
+tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
 import { Link } from 'gatsby';
