--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -4,7 +4,7 @@ type: 'blog'
 date: 2022-02-13
 published: true
 description: 'A gentle introduction to the Gradient Descent algorithm'
-tags: ['Calculus, 'Optimization', 'Machine Learning']
+tags: ['Calculus', 'Optimization', 'Machine Learning']
 ---
 
 This is part 1 of the series on Gradient Descent.
