--- a/content/blog/part-2-gradient-descent/index.mdx
+++ b/content/blog/part-2-gradient-descent/index.mdx
@@ -7,7 +7,7 @@ description: 'A Gradient Descent implementation with Linear Regression in Python
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
-import { Link } from 'gatsby';
+import { Link } from 'gatsby'
 
 This is part 2 of the series on Gradient Descent.
 
