--- a/content/blog/part-4-stochastic-gradient-descent/index.mdx
+++ b/content/blog/part-4-stochastic-gradient-descent/index.mdx
@@ -7,7 +7,7 @@ description: 'A Stochastic Gradient Descent implementation with Linear Regressio
 tags: ['Machine Learning', 'Optimization', 'Python']
 ---
 
-import { Link } from 'gatsby';
+import { Link } from 'gatsby'
 
 This is part 3 of the series on Gradient Descent.
 
