--- a/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
+++ b/content/blog/part-1-mathematics-of-gradient-descent/index.mdx
@@ -7,6 +7,8 @@ description: 'A gentle introduction to the Gradient Descent algorithm'
 tags: ['Calculus', 'Optimization', 'Machine Learning']
 ---
 
+import { Link } from 'gatsby'
+
 This is part 1 of the series on Gradient Descent.
 
 - <Link to="/blog/part-2-gradient-descent">
